--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "author": "Rayboy",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "express": "^4.18.1",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-inject": "^4.3.2",
+    "gulp-minify": "^3.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
