--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-inject": "^4.3.2",
     "gulp-minify": "^3.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "sharp": "^0.31.3"
   }
 }
